tests/specs/ecosystem/kt3k/capsule/0_6_0.test
kt3k/capsule/0.6.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'HTMLElement'.
  el: HTMLElement;
      ~~~~~~~~~~~
    at file://<tmpdir>/mod.ts:20:7

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
  query<T extends HTMLElement = HTMLElement>(selector: string): T | null;
                  ~~~~~~~~~~~
    at file://<tmpdir>/mod.ts:22:19

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
  query<T extends HTMLElement = HTMLElement>(selector: string): T | null;
                                ~~~~~~~~~~~
    at file://<tmpdir>/mod.ts:22:33

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
  queryAll<T extends HTMLElement = HTMLElement>(selector: string): NodeListOf<T>;
                     ~~~~~~~~~~~
    at file://<tmpdir>/mod.ts:24:22

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
  queryAll<T extends HTMLElement = HTMLElement>(selector: string): NodeListOf<T>;
                                   ~~~~~~~~~~~
    at file://<tmpdir>/mod.ts:24:36

TS2304 [ERROR]: Cannot find name 'NodeListOf'.
  queryAll<T extends HTMLElement = HTMLElement>(selector: string): NodeListOf<T>;
                                                                   ~~~~~~~~~~
    at file://<tmpdir>/mod.ts:24:68

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
export function mount(name?: string | null, el?: HTMLElement): void {}
                                                 ~~~~~~~~~~~
    at file://<tmpdir>/mod.ts:33:50

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
export function unmount(name: string, el: HTMLElement): void {}
                                          ~~~~~~~~~~~
    at file://<tmpdir>/mod.ts:34:43

Found 8 errors.

error: Type checking failed.

